# zHunter

./: .gitignore  .pylintrc  .readthedocs.yaml  MANIFEST.in  Makefile  README.md  README_short.md  absorber.py  base_window.py  key_binding.py  line_list_selection.py  line_list_selection_dialog.ui  main_frame.ui  misc.py  pyproject.toml  python-publish.yml  requirements.txt  setup.cfg  setup.py  spectral_functions.py  spectroscopic_system.py  update_version.sh  zhunter.py  zhunter_conda_env.yaml  zhunter_io.py
dev/conda_envs/: dev.yaml
dev/data/test_input_files/: MISTRAL_2D.fits  XSHOOTER_bintable_1D.fits
dev/notebooks/: Advanced 1D extraction.ipynb  Debugger.ipynb  Find emission lines algorithm.ipynb  Fit line panel.ipynb  Initialize module.ipynb  OneDGraphicsWidget.ipynb  Read inputs.ipynb  Sky transmission and emission.ipynb  Spectrum rebinning.ipynb  Spectrum.ipynb  Units window.ipynb  Wavelength and spatial bins for FITS spectra.ipynb  crosshairvb_test.py  pyqtgraph_tests.ipynb  test.py
dev/notebooks/tests/: OneDSpectrum.ipynb  Smoothing.ipynb
docs/: api.rst  conf.py  index.rst  requirements.txt  structure.rst
example_data/: GRB050730.fits
line_lists/: basic_line_list.csv  basic_line_list.txt  doublets.csv  emission_lines.csv  line_list.csv  line_list_for_ratio.csv  line_ratio.csv  line_ratio.txt
src/zhunter/: CheckBoxListWidget.py  LineFitGraphicsWidget.py  MainGraphicsWidget.py  OneDGraphicsWidget.py  __init__.py  catalogs.py  colors.py  conversions.py  data_handler.py  decorators.py  fit_plot.py  gui.py  initialize.py  io.py  key_binding.py  line_list_selection.py  misc.py  photometric_data_point.py  smoothing.py  spectraModel.py  spectral_functions.py  spectroscopic_system.py  spectrum.py  units.py  velocity_plot.py  wavelength_correction.py  zhunter_cl.py
src/zhunter/config/: default_config.yaml
src/zhunter/data/lines/: GRB_lines.ecsv  H2_important_lines.csv  H2_important_lines.ecsv  H_recomb_nir.csv  H_recomb_nir.ecsv  NIR_WR_em_lines.csv  NIR_WR_em_lines.ecsv  basic_line_list.csv  basic_line_list.ecsv  basic_lines.ecsv  emission_lines.csv  emission_lines.ecsv  fine_structure.csv  fine_structure.ecsv  galaxy_emission_lines.csv  galaxy_emission_lines.ecsv  intervening_lines.ecsv  intervening_lines_test.ecsv  line_list.csv  line_ratio.csv  line_ratio.ecsv
src/zhunter/data/lines/old_stuff/: abs_line_freq_GRBs.txt  doublets.csv  line_list.csv  tellurics_low_res_old.csv
src/zhunter/example_data/: MISTRAL_YSO_Spectre_20210906_222456UT_reduced_science_0.fits
src/zhunter/lines/: basic_line_list.csv  emission_lines.csv  fine_structure.csv  line_list_for_ratio.csv  line_ratio.csv  line_ratio_old.csv
src/zhunter/ui/: fit_plot.ui  gui.ui  key_bindings.ui  main_frame.ui  units.ui  velocity_plot.ui
