[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# [project]
# name = "zhunter"
# description = "A Python-based visualization tool for finding redshifts and manipulating astronomical spectra. "
# readme = "README_short.md"
# requires-python = ">=3.10"
# keywords = ["one", "two"]
# license = {text = "GNU General Public License v3 (GPLv3)"}
# classifiers = [
#     "Programming Language :: Python :: 3.10",
#     "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
#     "Operating System :: OS Independent",
#     "Natural Language :: English",
#     "Intended Audience :: Science/Research",
#     "Topic :: Scientific/Engineering :: Astronomy",
#     "Topic :: Scientific/Engineering :: Visualization",
#     "Development Status :: 4 - Beta",
# ]

# dynamic = ["version", "dependencies"]

# [tool.setuptools.dynamic]
# version = {attr = "zhunter.__version__"}
# dependencies = {file = "requirements.txt"}