[metadata]
name = zhunter
version = attr: zhunter.__version__
author = Jesse Palmerio
author_email = jesse.palmerio@obspm.fr
description = A Python-based visualization tool for finding redshifts and manipulating astronomical spectra. 
long_description = file: README_short.md
long_description_content_type = text/markdown
url = https://github.com/JPalmerio/zHunter
project_urls =
    Bug Tracker = https://github.com/JPalmerio/zHunter/issues
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Natural Language :: English
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Visualization
    Development Status :: 4 - Beta

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
include_package_data = True
zip_safe = False
install_requires =
    pyqt5>=5.15
    numpy>=1.22
    astropy>=5.0
    matplotlib>=3.5
    pandas>=1.4
    spectres>=2.1
[options.packages.find]
where = src
console_scripts =
    zhunter = zhunter.gui:main