[metadata]
name = zhunter
version = attr: zhunter.__version__
author = Jesse Palmerio
author_email = jesse.palmerio@obspm.fr
description = A Python-based visualization tool for finding redshifts and manipulating astronomical spectra. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JPalmerio/zHunter
project_urls =
    Bug Tracker = https://github.com/JPalmerio/zHunter/issues
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Natural Language :: English
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Visualization
    Development Status :: 4 - Beta

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True
zip_safe = False
install_requires =
    pyqt5>=5.15
    pyqtgraph>=0.13.1
    numpy>=1.24
    astropy>=5.2
    matplotlib>=3.6
    pandas>=1.5
    spectres>=2.1

[options.packages.find]
where = src
include = zhunter*

[options.package_data]
zhunter.ui =
    *.ui
zhunter.lines =
    *.csv
    *.txt

[options.entry_points]
console_scripts =
    zhunter = zhunter.gui:main